--- a/src/main/resources/templates/user/assignment.html
+++ b/src/main/resources/templates/user/assignment.html
@@ -28,7 +28,7 @@
                             <i class="fa-solid fa-copy text-white text-xl"></i></button>
                         <button th:formaction="@{/user/agenda/download/{id}(id=${a.id})}" title="Download PDF" class="bg-green-400 py-1 px-2 rounded-md ml-3">
                             <i class="fa-solid fa-download text-white text-xl"></i></button>
-                        <button class="delete_check bg-red-600 py-1 px-2 rounded-sm ml-3" title="Delete this agenda">
+                        <button class="delete_check bg-red-600 py-1 px-2 rounded-md ml-3" title="Delete this agenda">
                             <i class="fa-solid fa-trash-can text-white text-xl"></i></button>
                     </form>
                 </div>
