--- a/src/main/resources/templates/user/token.html
+++ b/src/main/resources/templates/user/token.html
@@ -22,16 +22,16 @@
         <div class="col-span-10 md:col-span-5" th:if="${token.hasToken}">
             <label for="token">API Token</label>
             <div id="show_hide_token">
-                <input class="rounded-sm w-10/12" type="password" id="token" th:value="${token.token}" />
+                <input class="rounded-md w-10/12" type="password" id="token" th:value="${token.token}" />
                 <a class="my-2" href=""><i class="fa fa-eye-slash" aria-hidden="true"></i></a>
             </div>
         </div>
         <div class="col-span-10 md:col-span-5" th:if="${token.hasToken()}">
             <p>Expires: <span th:text="${#temporals.format(token.expires, 'MMM dd, yyyy hh:mma')}"></span></p>
-            <p th:class="${token.expired} ? 'px-4 py-2 bg-red-200 rounded-sm border-red-400 inline border border-red-600' : 'px-4 py-2 bg-green-200 rounded-sm border-green-400 inline border border-green-600'"
+            <p th:class="${token.expired} ? 'px-4 py-2 bg-red-200 rounded-md border-red-400 inline border border-red-600' : 'px-4 py-2 bg-green-200 rounded-md border-green-400 inline border border-green-600'"
                th:text="${token.timePeriod()}"></p>
             <form th:action="@{/user/token/delete}" method="post" class="inline">
-                <button type="submit" id="token_delete" title="Delete Token" class="align-middle ml-4 mb-1 bg-red-600 py-1 px-2 rounded-sm">
+                <button type="submit" id="token_delete" title="Delete Token" class="align-middle ml-4 mb-1 bg-red-600 py-1 px-2 rounded-md">
                     <i class="fa-solid fa-trash-can text-white text-xl"></i></button>
             </form>
         </div>
