--- a/input.css
+++ b/input.css
@@ -2,7 +2,7 @@
 
 @layer base {
     input, textarea, select {
-        @apply !px-3 !py-2 drop-shadow-sm !rounded-md !border !border-solid !border-gray-300;
+        @apply !px-3 !py-2 !drop-shadow-sm !rounded-md !border !border-solid !border-gray-300;
     }
 
     /* Style specific input types */
