--- a/src/main/resources/templates/user/ward.html
+++ b/src/main/resources/templates/user/ward.html
@@ -12,7 +12,7 @@
             <form th:action="@{/user/ward/save}" method="post" th:object="${ward}">
                 <div class="mb-3">
                     <label for="ward-title">Ward Name</label>
-                    <input type="text" class="block rounded-sm border-gray-400" th:field="*{title}" id="ward-title" required placeholder="i.e. SunsetPeak 6th Ward"/>
+                    <input type="text" class="block rounded-md border-gray-400" th:field="*{title}" id="ward-title" required placeholder="i.e. SunsetPeak 6th Ward"/>
                     <input type="hidden" th:field="*{created}" />
                     <input type="hidden" th:name="userId" th:value="${user.id}"/>
                     <input type="hidden" th:field="*{id}" th:if="${ward.id != null}"/>
@@ -20,13 +20,13 @@
                 <div class="mb-3">
                     <label for="ward-path">Ward Path</label>
                     <i class="fa-solid fa-circle-info text-red-600" title="Required API path. See {path} parameter in the swagger documentation."></i>
-                    <input type="text" class="block rounded-sm border-gray-400 w-4/5" th:readonly="${user.hasWard()}"
+                    <input type="text" class="block rounded-md border-gray-400 w-4/5" th:readonly="${user.hasWard()}"
                            th:field="*{path}" id="ward-path" autocomplete="off" placeholder="i.e. sunsetpeak-6th" required/>
                     <p class="text-sm">No spaces. Must be min 5 characters, lower case, optional dash and numbers.</p>
                 </div>
                 <div class="mb-1">
                     <label for="descr">Description</label>
-                    <input type="text" class="block rounded-sm border-gray-400 w-4/5" th:field="*{subTitle}" id="descr" placeholder="i.e. Sunset Peak 6th in the California Sunset Stake"/>
+                    <input type="text" class="block rounded-md border-gray-400 w-4/5" th:field="*{subTitle}" id="descr" placeholder="i.e. Sunset Peak 6th in the California Sunset Stake"/>
                 </div>
                 <p class="leading-4">
                     <small class="text-red-600" th:if="${user.hasWard()}">
@@ -34,7 +34,7 @@
                         If you absolutely must change the path <a class="underline text-blue-600" href="mailto:admin@latterdayward.com?subject=Change%20Ward%20Path">please contact me.</a>
                     </small>
                 </p>
-                <button type="submit" class="my-3 p-1.5 bg-blue-400 block rounded-sm border-blue-600 border" id="ward-save">Save</button>
+                <button type="submit" class="my-3 p-1.5 bg-blue-400 block rounded-md border-blue-600 border" id="ward-save">Save</button>
             </form>
             <div class="bg-amber-100 border border-amber-400 rounded-lg mt-8" th:if="${user.isOwner()}">
                 <div class="p-4 rounded-t-lg font-bold bg-amber-200">Need to Transfer Ownership?</div>
@@ -92,11 +92,11 @@
                     <div class="col-span-1 font-bold text-center">To Publisher</div>
                 </div>
                 <div class="grid grid-cols-5" th:each="e: ${editors}" th:if="${!#lists.isEmpty(editors)}">
-                    <div class="md:overflow-visible overflow-hidden col-span-2" th:text="${e.username}"></div>
+                    <div class="md:overflow-visible overflow-hidden col-span-2" th:text="${e.userName}"></div>
                     <div class="col-span-1 text-center">
                         <i class="fa-regular fa-circle-check text-green-600" th:if="${e.isEditor()}"></i>
                         <form th:action="@{/user/access/approve}" method="post" th:if="${e.role == null}">
-                            <input type="hidden" name="username" th:value="${e.username}" />
+                            <input type="hidden" name="username" th:value="${e.userName}" />
                             <input type="hidden" name="role" th:value="${e.accessRequest.role}" />
                             <button class="px-1 bg-blue-400 rounded border-blue-600 border">Approve</button>
                             <button class="px-1 bg-red-400 rounded border-red-600 border" th:formaction="@{/user/access/deny}">Deny</button>
@@ -104,13 +104,13 @@
                     </div>
                     <div class="col-span-1 text-center">
                         <form th:action="@{/user/access/deny}" method="post" th:if="${e.isEditor()}">
-                            <input type="hidden" name="username" th:value="${e.username}" />
+                            <input type="hidden" name="username" th:value="${e.userName}" />
                             <button title="Delete Access"><i class="fa-solid fa-trash-can text-red-600"></i></button>
                         </form>
                     </div>
                     <div class="col-span-1 text-center">
                         <form th:action="@{/user/access/promote/{role}(role='PUBLISHER')}" method="post" th:if="${e.isEditor()}">
-                            <input type="hidden" name="username" th:value="${e.username}" />
+                            <input type="hidden" name="username" th:value="${e.userName}" />
                             <button title="Change to Publisher"><i class="fa-solid fa-arrow-down text-blue-400"></i></button>
                         </form>
                     </div>
@@ -125,11 +125,11 @@
                     <div class="col-span-1 font-bold text-center">To Editor</div>
                 </div>
                 <div class="grid grid-cols-5" th:each="e: ${publishers}">
-                    <div class="col-span-2 overflow-hidden md:overflow-visible" th:text="${e.username}"></div>
+                    <div class="col-span-2 overflow-hidden md:overflow-visible" th:text="${e.userName}"></div>
                     <div class="col-span-1 text-center">
                         <i class="fa-regular fa-circle-check text-green-600" th:if="${e.isPublisher()}"></i>
                         <form th:action="@{/user/access/approve}" method="post" th:if="${e.role == null}">
-                            <input type="hidden" name="username" th:value="${e.username}" />
+                            <input type="hidden" name="username" th:value="${e.userName}" />
                             <input type="hidden" name="role" th:value="${e.accessRequest.role}" />
                             <button class="px-1 bg-blue-400 rounded border-blue-600 border">Approve</button>
                             <button class="px-1 bg-red-400 rounded border-red-600 border" th:formaction="@{/user/access/deny}">Deny</button>
@@ -137,13 +137,13 @@
                     </div>
                     <div class="col-span-1 text-center">
                         <form th:action="@{/user/access/deny}" method="post" th:if="${e.isPublisher()}">
-                            <input type="hidden" name="username" th:value="${e.username}" />
+                            <input type="hidden" name="username" th:value="${e.userName}" />
                             <button title="Delete Access"><i class="fa-solid fa-trash-can text-red-600"></i></button>
                         </form>
                     </div>
                     <div class="col-span-1 text-center">
                         <form th:action="@{/user/access/promote/{role}(role='EDITOR')}" method="post" th:if="${e.isPublisher()}">
-                            <input type="hidden" name="username" th:value="${e.username}" />
+                            <input type="hidden" name="username" th:value="${e.userName}" />
                             <button title="Change to Editor"><i class="fa-solid fa-arrow-up text-blue-400"></i></button>
                         </form>
                     </div>
